# mosquitto-message-sign-plugin

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  mosquitto-example.conf
src/: certificate_repository.c  certificate_repository.h  error.h  plugin.c  plugin.h  utils.c  utils.h
test/: CMakeLists.txt  test_utils.c
